# recallvault

./: .gitignore  LICENSE  config.json  main.spec  pyproject.toml  requirements.txt  setup.py
recallVault.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recallvault/: config.py  main.py
recallvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: app.py  cli.py  log.py  logger.py  main.py
src/tui/: add_entry.py  create_project.py  list_entries.py  list_project.py  list_todos.py  main_menu.py
